Refactor alarms deletion; separate tenant entities deletion task